changes_in_exception

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-######Database####
+##################### Database Configuration #########################
 postgressql.user=admin
 postgressql.password=admin
 postgressql.host=127.0.0.1
 postgressql.port=5432
-postgressql.database=db
+postgressql.database=db_name
+############################################################
+
+##################### Log configuration #########################
+# logger.metrics.handlers=console_handler,file_handler,rolling_file_handler
+#logger.metrics.formatter=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+logger.metrics.level=INFO
+logger.metrics.formatter=%(message)s
+logger.metrics.handlers=console_handler,rolling_file_handler
+logger.metrics.filehandler.filepath=metrics.log
+logger.rolling.rolling.max_bytes=1048576
+logger.rolling.rolling.backupCount=2
+############################################################
