--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ postgressql.user=admin
 postgressql.password=admin
 postgressql.host=127.0.0.1
 postgressql.port=5432
-postgressql.database=db_name
+postgressql.database=dbname
 ############################################################
 
 ##################### Log configuration #########################
