--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ postgressql.user=admin
 postgressql.password=admin
 postgressql.host=127.0.0.1
 postgressql.port=5432
-postgressql.database=dbname
+postgressql.database=test
 ############################################################
 
 ##################### Log configuration #########################
@@ -16,4 +16,12 @@ logger.metrics.handlers=console_handler,rolling_file_handler
 logger.metrics.filehandler.filepath=metrics.log
 logger.rolling.rolling.max_bytes=1048576
 logger.rolling.rolling.backupCount=2
+############################################################
+
+##################### Docker Configuration #########################
+docker.db.user=admin
+docker.db.password=admin
+docker.db.host=127.0.0.1
+docker.db.port=5432
+docker.db.database=test
 ############################################################
