--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,29 @@ services:
       context: .
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=pokemon
+      - POSTGRES_USER=${docker_db_user}
+      - POSTGRES_PASSWORD=${docker_db_password}
+      - POSTGRES_DB=${docker_db_database}
     depends_on:
       - db
     networks:
       - pokemanapi_pokemanapi_default
 
   db:
-    image: postgres:latest
+    image: postgres:16.0
     ports:
       - "5432:5432"
+    env_file:
+      - .env
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=pokemon
+      - POSTGRES_USER=${docker_db_user}
+      - POSTGRES_PASSWORD=${docker_db_password}
+      - POSTGRES_DB=${docker_db_database}
     networks:
       - pokemanapi_pokemanapi_default
     volumes:
