changes in .env file

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ##################### Database Configuration #########################
-postgressql.user=admin
-postgressql.password=admin
+postgressql.user=WVdRPSEhJiEhYldsdQ==
+postgressql.password=WVdRPSEhJiEhYldsdQ==
 postgressql.host=127.0.0.1
 postgressql.port=5432
-postgressql.database=test
+postgressql.database=Y0c5ciEhJiEhWlcxdmJnPT0=
 ############################################################
 
 ##################### Log configuration #########################
@@ -23,5 +23,5 @@ docker.db.user=admin
 docker.db.password=admin
 docker.db.host=127.0.0.1
 docker.db.port=5432
-docker.db.database=test
+docker.db.database=pokemon
 ############################################################
